--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
-    "start": "json-server --watch db.json --port $PORT"
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.7.9",
