--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
-    "start": "node server.js"
+    "start": "json-server --watch db.json --port $PORT"
   },
   "dependencies": {
     "axios": "^1.7.9",
     "express": "^4.21.2",
-    "json-server": "^0.17.4",
+    "json-server": "^0.17.0",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
